# GNU_Linux_dev

./: README.md
08_I18n/po/: predict_number.pot  ru.po
09_PatchDiff/: patch1.diff  patch2.diff  patch3.diff
11_Documenting/po/: ru.po
12_InstallPackaging/: Makefile.am  autogen.sh  configure.ac
12_InstallPackaging/doc/: Doxyfile  Makefile.am
12_InstallPackaging/man/: Makefile.am  converter.1
12_InstallPackaging/po/: ru.po
12_InstallPackaging/src/: Makefile.am  converter.c  converter.h  main.c
12_InstallPackaging/tests/: Makefile.am  test_converter.c
